Begin to identify as v2.7.5b2 (#46)
We update the release serial in the build files and also notes of the release process that got us here.

Co-authored-by: Jeff Allen <ja.py@farowl.co.uk>